[package]
name = "bssl"
version = "0.1.0"
edition = "2021"

[dependencies]
# the crate will need to be generated at this path by running this command at root
# `mkdir build && cd build && cmake -G Ninja .. -DRUST_BINDINGS="$(gcc -dumpmachine)" && ninja`
bssl-sys = {path = "../../build/rust/bssl-sys"}
foreign-types = "0.5.0"
libc = "0.2"

[dev-dependencies]
wycheproof = "0.4.0"
hex-literal = "0.3.4"